--- a/index.html
+++ b/index.html
@@ -3,32 +3,47 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Vijayamangalam Thottam</title>
-	<script src="three.min.js"></script>
-	<script src="panolens.min.js"></script>
-	<style type="text/css">
-		body{
-			padding: 0;
-			margin: 0;
-		}
-		.panolens-canvas{
-			max-width: 100%;
-		}
-		.panolens-container {
-		    height: 100vh;
-		}
-	</style>
+	<title>Test</title>
+    <style type="text/css">
+        body{
+            padding: 0;
+            margin: 0;
+        }
+    </style>
+
+
+
+<head>
+    <!-- for optimal display on high DPI devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.min.css" />
 </head>
-<body>
-	<script type="text/javascript">
-	const panorama = new PANOLENS.ImagePanorama( 'https://cdn.jsdelivr.net/gh/hrefdinesh/360/dji_fly_20240402_184142_0236_1712063702343_pano%20(1).jpg' );
-	const viewer = new PANOLENS.Viewer({
-		controlBar:false, 
-		cameraFov:80,
-		initialLookAt:new THREE.Vector3(45, -90, 0),
-	});
-	viewer.add( panorama );
-	</script>
+
+<!-- the viewer container must have a defined size -->
+<div id="viewer" style="width: 100vw; height: 100vh;"></div>
+
+<script type="importmap">
+    {
+        "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three/build/three.module.js",
+            "@photo-sphere-viewer/core": "https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.module.js",
+            "@photo-sphere-viewer/gyroscope-plugin": "https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin@5/index.module.js"
+        }
+    }
+</script>
+
+<script type="module">
+    import { Viewer } from '@photo-sphere-viewer/core';
+    import { GyroscopePlugin } from '@photo-sphere-viewer/gyroscope-plugin';
+
+    const viewer = new Viewer({
+        plugins: [ GyroscopePlugin],
+        container: document.querySelector('#viewer'),
+        panorama: 'https://cdn.jsdelivr.net/gh/hrefdinesh/360/dji_fly_20240402_184142_0236_1712063702343_pano%20(1).jpg',
+        navbar: ['fullscreen'],
+    });
+</script>
 
 </body>
 </html>
