--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,9 @@
             padding: 0;
             margin: 0;
         }
+        .psv-navbar{
+            z-index: 111;
+        }
     </style>
 
 
