--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,9 @@
 	.psv-navbar{
             z-index: 111;
         }
+        .psv-navbar--open {
+            top: calc(100vh - 100px);
+        }
     </style>
 
 
