--- a/index2.html
+++ b/index2.html
@@ -124,7 +124,7 @@
         ],
         container: document.querySelector('#viewer'),
         panorama: 'https://cdn.jsdelivr.net/gh/hrefdinesh/360/dji_fly_20240402_184142_0236_1712063702343_pano%20(1).jpg',
-        navbar: ['fullscreen'],
+        navbar: ['fullscreen','gyroscope'],
     });
 </script>
 
