--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,9 @@
             padding: 0;
             margin: 0;
         }
+	    #viewer{
+            height: 100dvh !important;
+        }
         /*.psv-navbar{
             z-index: 111;
         }
